Solve Uneven Card Width Problem, And Modify Content Grid Rows

--- a/styles.css
+++ b/styles.css
@@ -143,11 +143,11 @@ body {
     padding: 1rem 1.5rem;
     grid-area: 2 / 2 / 3 / 3;
     display: grid;
-    grid-template: 1fr 1fr / 3fr 1fr;
+    grid-template: auto auto / 3fr 1fr;
     column-gap: 1rem;
 }
 .content h3 {
-    margin-bottom: .6rem;
+    margin-bottom: .5rem;
     font-size: 1.3rem;
 }
 
@@ -155,6 +155,8 @@ body {
 .content-body {
     grid-area: 1 / 1 / 3 / 2;
     padding: 1rem;
+}
+.content-card-container {
     display: grid;
     grid-template-rows: auto 1fr 1fr;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -163,7 +165,7 @@ body {
 .content-body h3 {
     grid-area: 1 / 1 / 2 / 3;
     align-self: start;
-    margin-bottom: -2px;
+    margin-bottom: 12px;
 }
 .content-cards {
     display: grid;
